routing-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routing-service
  namespace: zerodt-demo
spec:
  progressDeadlineSeconds: 180
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.34.6
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 9901
          name: envoy-admin
          protocol: TCP
        resources:
          limits:
            memory: 200Mi
            cpu: 200m
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - mountPath: /etc/envoy/
          name: envoy-config-volume
        livenessProbe:
          httpGet:
            path: /ready
            port: envoy-admin
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: envoy-admin
          initialDelaySeconds: 5
          periodSeconds: 2
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /ready
            port: envoy-admin
          initialDelaySeconds: 1
          periodSeconds: 1
          failureThreshold: 10
      terminationGracePeriodSeconds: 30
      volumes:
      - name: envoy-config-volume
        configMap:
          name: routing-envoy-config
