routing-service/poc-envoy.yaml
# docker run -d -it --mount type=bind,source=/root/envoy.yml,target=/etc/envoy.yml -p 10000:10000 envoyproxy/envoy:v1.35.3 -c /etc/envoy.yml
# tries=1000; echo "$(echo "scale=3; $(for f in $( seq 1 $tries ); do curl -s 127.0.0.1:10000; done | grep -o 0| wc -l)/$tries * 100"| bc)% of tries went to the Zero endpoint"
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: http_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          http_protocol_options:
            accept_http_10: true
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
          - name: envoy.file_access_log
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
              json_format:
                start_time: "%START_TIME%"
                request_method: "%REQ(:METHOD)%"
                path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                protocol: "%PROTOCOL%"
                response_code: "%RESPONSE_CODE%"
                response_flags: "%RESPONSE_FLAGS%"
                bytes_received: "%BYTES_RECEIVED%"
                bytes_sent: "%BYTES_SENT%"
                duration: "%DURATION%"
                response_upstream_service_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                user_agent: "%REQ(USER-AGENT)%"
                request_id: "%REQ(X-REQUEST-ID)%"
                request_authority: "%REQ(:AUTHORITY)%"
                upstream_host: "%UPSTREAM_HOST%"
          route_config:
            name: local_route
            virtual_hosts:
            - name: web
              domains:
              - "*"
              routes:
              - match:
                  prefix: /
                request_headers_to_add:
                  - header:
                      key: "procore-internal-authentication-timestamp"
                      value: "%START_TIME(%s)%"
                    append: false
                route:
                  cluster: web
          http_filters:
            - name: envoy.buffer
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer"
                max_request_bytes: 4294967295
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  - name: failure_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: envoy-fixed-response-1

          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: route-1
            virtual_hosts:
            - name: direct_response_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                direct_response:
                  status: 200
                  body:
                    inline_string: "1"
  - name: success_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 9000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: envoy-fixed-response-1

          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: route-1
            virtual_hosts:
            - name: direct_response_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                direct_response:
                  status: 200
                  body:
                    inline_string: "0"
  clusters:
  - name: web
    lb_policy: ROUND_ROBIN
    type: strict_dns
    load_assignment:
      cluster_name: web_cluster
      endpoints:
        - lb_endpoints:
          - load_balancing_weight: 1
            endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 9000
          - load_balancing_weight: 99
            endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 8000
